# my_payments

./: .dockerignore  .env  Cargo.toml  Dockerfile  api_docs.md  diesel.toml  docker-compose.yml  readme.md
migrations/2024-07-04-193641_create_user/: up.sql
migrations/2024-07-04-193657_create_transactions/: up.sql
scripts/: init_db.sh  setup.sh
src/: auth_guard.rs  config.rs  db.rs  errors.rs  main.rs  routes.rs  schema.rs  utils.rs
src/handlers/: transaction.rs  user.rs
src/models/: transaction.rs  user.rs
src/routes/: transaction.rs  user.rs
