[package]
name = "my_payments"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
actix-rt = "2.10.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
diesel = { version = "2.2.1", features = [
    "postgres",
    "r2d2",
    "chrono",
    "uuid",
] }
uuid = { version = "1.9.1", features = ["serde", "v4"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
env_logger = "0.11.3"
log = "0.4.22"
bcrypt = "0.15.1"
validator = "0.18.1"
actix-web-httpauth = "0.8.2"
chrono = { version = "0.4.38", features = ["serde"] }
r2d2 = "0.8.10"
futures = "0.3.30"
actix-governor = "0.5.0"
thiserror = "1.0.61"
diesel_migrations = "2.0.0"


[dev-dependencies]
mockall = "0.12.1"
